fix sidebar collapse button position

--- a/examples/district/app/[locale]/[district]/components/Content.module.scss
+++ b/examples/district/app/[locale]/[district]/components/Content.module.scss
@@ -59,8 +59,6 @@
 }
 
 .Collapsed {
-  transform: translateX(-210px);
-
   & > span {
     transform: rotate(180deg);
   }
